[gd_scene load_steps=27 format=3 uid="uid://c1y0b6v3m7kqj"]

[ext_resource type="Script" uid="uid://bye5hmlwe8gub" path="res://scenes/game_object/boss_enemy/boss_enemy.gd" id="1_gpcli"]
[ext_resource type="PackedScene" uid="uid://d32bhk07dm6w8" path="res://scenes/component/health_component.tscn" id="2_en8ir"]
[ext_resource type="PackedScene" uid="uid://ci3popyfx4vbv" path="res://scenes/component/vial_drop_component.tscn" id="3_v8t1l"]
[ext_resource type="PackedScene" uid="uid://cn4jjvvblm8lp" path="res://scenes/component/velocity_component.tscn" id="4_7n42o"]
[ext_resource type="PackedScene" uid="uid://gsyk0iqo1m50" path="res://scenes/component/hurtbox_component.tscn" id="4_e2gan"]
[ext_resource type="PackedScene" uid="uid://cjxiijis5jocn" path="res://scenes/component/death_component.tscn" id="4_j8jii"]
[ext_resource type="PackedScene" uid="uid://b1rgnu4v5t5yp" path="res://scenes/ability/fireball_ability_controller/fireball_ability_controller.tscn" id="5_m1ysn"]
[ext_resource type="PackedScene" uid="uid://b20x14h768t03" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="6_5p4sr"]
[ext_resource type="Shader" uid="uid://6p77t16b127a" path="res://scenes/component/hit_flash_component.gdshader" id="6_jhg8v"]
[ext_resource type="PackedScene" uid="uid://bkkq5ohgbnkxw" path="res://scenes/component/hit_flash_component.tscn" id="7_4kqgf"]
[ext_resource type="PackedScene" uid="uid://bh478361trp2r" path="res://scenes/component/random_audio_stream_player_2d_component.tscn" id="10_74ju1"]
[ext_resource type="AudioStream" uid="uid://ckjo8r6fns8s1" path="res://assets/audio/footstep_carpet_000.ogg" id="10_d8kjc"]
[ext_resource type="AudioStream" uid="uid://bhxo10h1q3e2" path="res://assets/audio/footstep_carpet_001.ogg" id="12_2b1bb"]
[ext_resource type="AudioStream" uid="uid://dycvhorndvf1c" path="res://assets/audio/footstep_carpet_002.ogg" id="13_oy0ft"]
[ext_resource type="AudioStream" uid="uid://dqqkhujcgssj6" path="res://assets/audio/footstep_carpet_003.ogg" id="14_6oeop"]
[ext_resource type="AudioStream" uid="uid://bmnew52u2j6r5" path="res://assets/audio/footstep_carpet_004.ogg" id="15_yavv3"]
[ext_resource type="Texture2D" uid="uid://grf1esxamv8l" path="res://sprites/dragon1_anim.png" id="18_ql8xh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ollop"]
resource_local_to_scene = true
shader = ExtResource("6_jhg8v")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5yb0v"]
radius = 13.0384

[sub_resource type="AtlasTexture" id="AtlasTexture_cb80a"]
atlas = ExtResource("18_ql8xh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qyew"]
atlas = ExtResource("18_ql8xh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygu0k"]
atlas = ExtResource("18_ql8xh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htcmv"]
atlas = ExtResource("18_ql8xh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_iguem"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb80a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qyew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygu0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htcmv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nb0jk"]
blend_mode = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_5o3ap"]
radius = 7.0

[node name="DragonBoss" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.6, 1.6)
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_gpcli")

[node name="HealthComponent" parent="." instance=ExtResource("2_en8ir")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_v8t1l")]
drop_rate = 0.5
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_7n42o")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_4kqgf")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/dragon_sprite")
hit_flash_material = SubResource("ShaderMaterial_ollop")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_j8jii")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/dragon_sprite")

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(48, 6)
offset_left = -24.0
offset_top = -60.0
offset_right = 24.0
offset_bottom = -54.0
scale = Vector2(0.625, 0.625)
pivot_offset = Vector2(24, 3)
max_value = 1.0
value = 1.0
show_percentage = false

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("10_74ju1")]
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("10_d8kjc"), ExtResource("12_2b1bb"), ExtResource("13_oy0ft"), ExtResource("14_6oeop"), ExtResource("15_yavv3")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_e2gan")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_5yb0v")
debug_color = Color(0.991942, 0, 0.258832, 0.42)

[node name="Abilities" type="Node" parent="."]

[node name="FireballAbilityController" parent="Abilities" instance=ExtResource("5_m1ysn")]
owner_group = "enemy"
target_group = "player"

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("6_5p4sr")]
owner_group = "enemy"
target_group = "player"

[node name="MinionSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Visuals" type="Node2D" parent="."]

[node name="dragon_sprite" type="AnimatedSprite2D" parent="Visuals"]
visible = false
clip_children = 2
sprite_frames = SubResource("SpriteFrames_iguem")
autoplay = "default"

[node name="enemy_color" type="ColorRect" parent="Visuals/dragon_sprite"]
material = SubResource("CanvasItemMaterial_nb0jk")
offset_left = -26.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5o3ap")
